--- a/createEditAccount.html
+++ b/createEditAccount.html
@@ -39,6 +39,11 @@
         justify-self: center;
         display: none;
       }
+      .title {
+        font-size: var(--lg);
+        margin-bottom: 36px;
+        text-align: start;
+      }
       .form {
         display: flex;
         flex-direction: column;
@@ -46,13 +51,6 @@
       .form div {
         display: flex;
         flex-direction: column;
-      }
-      .form a {
-        color: var(--hospital-green);
-        font-size: var(--sm);
-        text-align: center;
-        text-decoration: none;
-        margin-bottom: 52px;
       }
       .label {
         font-size: var(--sm);
@@ -68,7 +66,7 @@
         padding: 6px;
         margin-bottom: 12px;
       }
-      .input-email {
+      .input-name, .input-email, .input-password {
         margin-bottom: 22px;
       }
       .primary-button {
@@ -76,17 +74,6 @@
         border-radius: 8px;
         border: none;
         color: var(--white);
-        width: 100%;
-        cursor: pointer;
-        font-size: var(--md);
-        font-weight: bold;
-        height: 50px;
-      }
-      .secondary-button {
-        background-color: var(--white);
-        border-radius: 8px;
-        border: 1px solid var(--hospital-green);
-        color: var(--hospital-green);
         width: 100%;
         cursor: pointer;
         font-size: var(--md);
@@ -101,10 +88,12 @@
         .logo {
           display: block;
         }
-        .secondary-button {
-          position: absolute;
-          bottom: 24px;
-          width: inherit;
+        .form-container {
+          height: 100%;
+        }
+        .form {
+          height: 100%;
+          justify-content: space-between;
         }
       }
     </style>
@@ -112,18 +101,18 @@
   <body>
     <div class="password-container">
       <div class="form-container">
-        <img src="./logos/logo_yard_sale.svg" alt="logo" class="logo">
+        <h1 class="title">My account</h1>
         <form action="/" class="form">
           <div>
+            <label for="name" class="label">Name</label>
+            <input type="text" id="name" placeholder="John Doe" class="input input-name">
             <label for="email" class="label">Email address</label>
-            <input type="email" id="password" placeholder="example@example.com" class="input input-email">
+            <input type="email" id="email" placeholder="example@example.com" class="input input-email">
             <label for="password" class="label">Password</label>
             <input type="password" id="password" placeholder="*********" class="input input-password">
-            <input type="submit" value="Log in" class="primary-button newPassword-button">
-            <a href="/">Forgot my password</a>
           </div>
+          <input type="submit" value="Save" class="primary-button newPassword-button">
         </form>
-        <button class="secondary-button signup-button">Sign up</button>
       </div>
     </div>
   </body>
