--- a/editAcount.html
+++ b/editAcount.html
@@ -57,23 +57,16 @@
         font-weight: bold;
         margin-bottom: 4px;
       }
-      .input {
-        background-color: var(--text-input-field);
-        border: none;
-        border-radius: 8px;
-        height: 30px;
+      .value {
+        color: var(--very-light-pink);
         font-size: var(--md);
-        padding: 6px;
-        margin-bottom: 12px;
+        margin: 8px 0 32px 0;
       }
-      .input-name, .input-email, .input-password {
-        margin-bottom: 22px;
-      }
-      .primary-button {
-        background-color: var(--hospital-green);
+      .secondary-button {
+        background-color: var(--white);
         border-radius: 8px;
-        border: none;
-        color: var(--white);
+        border: 1px solid var(--hospital-green);
+        color: var(--hospital-green);
         width: 100%;
         cursor: pointer;
         font-size: var(--md);
@@ -111,7 +104,7 @@
             <label for="password" class="label">Password</label>
             <p class="value">*********</p>
           </div>
-          <input type="submit" value="Save" class="primary-button newPassword-button">
+          <input type="submit" value="Edit" class="secondary-button newPassword-button">
         </form>
       </div>
     </div>
